# Scene-OpenGL-CPP

./: .gitignore  CMakeLists.txt  README.md  camera.h  constant.h  light.h  lighting_maps.fs  lighting_maps.vs  loader.cpp  loader.h  main.cpp  model.cpp  model.h  shader.cpp  shader.h  shader_code.h
assets/chairs/1be0108997e6aba5349bb1cbbf9a4206/models/: model_normalized.mtl
assets/chairs/2f1bc92c53f359d759a6208793b9dfca/models/: model_normalized.mtl
assets/chairs/9ab4d3826bd2f07b51bb569b4bf0aada/models/: model_normalized.mtl
assets/tables/1a767b8130e8a5722a7d46e74f08da70/models/: model_normalized.mtl
include/: stb_image.h
include/GLFW/: glfw3.h  glfw3native.h
include/glad/: glad.h
include/glm/detail/: type_half.inl  type_quat.hpp  type_quat.inl  type_quat_simd.inl
include/glm/gtc/: quaternion.hpp
include/glm/gtx/: fast_exponential.inl  matrix_decompose.inl
src/: glad.c
