cmake_minimum_required(VERSION 3.20)
project(CG_Lab2)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 20)
IF (WIN32)
    if (CMAKE_CL_64)
        link_directories(${PROJECT_SOURCE_DIR}/lib/msvc/x64)
    else()
        link_directories(${PROJECT_SOURCE_DIR}/lib/msvc/)
    endif()
    set(CMAKE_CXX_FLAGS "-W4")
ELSEIF (APPLE)
    link_directories(${PROJECT_SOURCE_DIR}/lib/apple/)
    set(CMAKE_EXE_LINKER_FLAGS "-framework Cocoa -framework OpenGL -framework IOKit -framework CoreVideo -framework CoreFoundation")
    set(CMAKE_CXX_FLAGS "-Wall")
ELSE ()
    MESSAGE("Unsupported operate system: ${CMAKE_SYSTEM_NAME}")
ENDIF ()

find_package(OpenGL REQUIRED)
include_directories(${PROJECT_SOURCE_DIR}/include)
link_directories(${PROJECT_SOURCE_DIR}/lib)
add_executable(CG_Lab2 main.cpp src/glad.c include/stb_image.h shader.h model.h model.cpp shader.cpp camera.h loader.h loader.cpp shader_code.h)
target_link_libraries(CG_Lab2 ${OPENGL_LIBRARY} glfw3)
# copy resources
# https://stackoverflow.com/questions/42476765/copying-assets-directory-from-source-to-build-directory-in-cmake
add_custom_target(copy_assets COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_LIST_DIR}/copy-assets.cmake)
add_dependencies(CG_Lab2 copy_assets)